--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html>
- <head>
-   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-   <link href="css/styles.css" rel="stylesheet" type="text/css">
-   <script src="js/jquery-3.1.1.min.js"></script>
-   <script src="js/scripts.js"></script>
-   <title>Leap year detector</title>
- </head>
- <body>
-   <div class="container">
-     <h1>Leap year detector</h1>
+  <html>
+    <head>
+      <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
+      <script src="js/jquery-3.1.1.min.js"></script>
+      <script src="js/scripts.js"></script>
+      <title>Leap year detector</title>
+    </head>
+    <body>
+      <div class="container">
+        <h1>Leap year detector</h1>
 
-     <form id="leap-year">
-       <div class="form-group">
-         <label for="year">Enter a year and find out if it's a leap year:</label>
-         <input id="year" type="text">
-       </div>
+        <form id="leap-year">
+          <div class="form-group">
+            <label for="year">Enter a year and find out if it's a leap year:</label>
+            <input id="year" type="text">
+          </div>
 
-       <button type="submit" class="btn">Find out!</button>
-     </form>
+          <button type="submit" class="btn">Find out!</button>
+        </form>
 
-     <div id="result">
-
-     </div>
-   </div>
-   </body>
- </html>
+        <div id="result">
+          <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
+        </div>
+      </div>
+    </body>
+  </html>
